java warning fixes
Signed-off-by: Alex Knop <knopalex@msu.edu>